--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "scully": "npx scully",
-    "scully:build": "ng build && npx scully -- --scanRoutes && npx scully serve",
+    "scully:build": "ng build && npx scully -- --scanRoutes && npx scully && npx scully serve",
     "scully:serve": "npx scully serve",
     "scully:scan": "npx scully -- --scanRoutes",
     "scully:watch": "npx scully -- --watch"
