--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/config.yml"
             ],
             "styles": [
               "src/styles.scss"
@@ -96,7 +97,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/config.yml"
             ],
             "styles": [
               "src/styles.scss"
