--- a/src/config.yml
+++ b/src/config.yml
@@ -6,10 +6,10 @@ collections:
     label: "Blog" # Used in the UI
     folder: "blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{day}}-{{month}}-{{year}}-{{slug}}" # Filename template, e.g., DD-MM-YYYY-title.md
+    slug: "{{slug}}" # Filename template, e.g., slug.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
       - {label: "Published", name: "published", widget: "boolean", default: true}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Author", name: "author", widget: "string" }
