--- a/src/config.yml
+++ b/src/config.yml
@@ -10,6 +10,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
+      - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Published", name: "published", widget: "boolean", default: true}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Author", name: "author", widget: "string" }
